# routes/gardeningsupplies.js
@@ -1,14 +1,14 @@
 const express = require('express');
 const router = express.Router();
-const validation = require('../middleware/validate.js');
-const gardeningSuppliesController = require('../controllers/gardeningsupplies.js');
-const { isAuthenticated } = require('../middleware/authenticate.js');
+const validation = require('../middleware/validate');
+const gardeningSuppliesController = require('../controllers/gardeningsupplies');
+const { isAuthenticated } = require('../middleware/authenticate');
 
 router.get('/', gardeningSuppliesController.getAllSupplies);
 
 router.get('/:id', gardeningSuppliesController.getSingleSupply);
-router.post('/', isAuthenticated, validation.supply, gardeningSuppliesController.createSupply);
-router.put('/:id', isAuthenticated, validation.supply, gardeningSuppliesController.updateSupply);
+router.post('/', isAuthenticated, validation.gerdeningSupplies, gardeningSuppliesController.createSupply);
+router.put('/:id', isAuthenticated, validation.gerdeningSupplies, gardeningSuppliesController.updateSupply);
 router.delete('/:id', isAuthenticated, gardeningSuppliesController.deleteSupply);
 
 module.exports = router;
